cmss/main/default/objects/Campaign/fields/ActionCategory__c.field-meta.xml
<CustomField>
    <fullName>ActionCategory__c</fullName>
    <description>Kategorie akce</description>
    <label>Action Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>