cmss/main/default/objects/Campaign/fields/CampaignInfo__c.field-meta.xml
<CustomField>
    <fullName>CampaignInfo__c</fullName>
    <description>Informace ke kampani</description>
    <label>Campaign Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>