cmss/main/default/objects/Campaign/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Jedinečný název kódu identifikující kampaň</description>
    <label>Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>