cmss/main/default/objects/Campaign/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <description>Zdroj dat</description>
    <label>Data Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>