cmss/main/default/objects/Campaign/fields/InputType__c.field-meta.xml
<CustomField>
    <fullName>InputType__c</fullName>
    <description>Typ vstupu</description>
    <label>Input Type</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>