cmss/main/default/objects/Campaign/fields/NumberOfCampaignMembers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCampaignMembers__c</fullName>
    <label>Number Of Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>