cmss/main/default/objects/Campaign/listViews/HeadquartersCampaigns.listView-meta.xml
<ListView>
    <fullName>HeadquartersCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Product__c</columns>
    <columns>NumberOfCampaignMembers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>notEqual</operation>
        <value>Microcampaign</value>
    </filters>
    <label>Kampaně Centrály</label>
</ListView>